--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "hapi": "^13.5.0",
     "mz": "^2.4.0",
     "node-fetch": "^1.5.3",
+    "rethink-migrate": "^1.3.1",
+    "rethinkdbdash": "^2.3.16",
     "ts-node": "^0.9.3",
     "tslint": "^3.13.0",
     "typescript": "^1.8.10",
