--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
+    "compileOnSave": false,
     "compilerOptions": {
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": false,
-        "sourceMap": true
+        "sourceMap": true,
+         "outDir": "out"
     },
     "exclude": [
         "node_modules"
