--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ts-node": "^0.9.3",
     "tslint": "^3.13.0",
     "typescript": "^1.8.10",
-    "typings": "^1.3.1"
+    "typings": "^1.3.1",
+    "yar": "^7.0.2"
   }
 }
