--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bunyan": "^1.8.1",
     "hapi": "^13.5.0",
+    "libtidy": "^0.3.0",
     "mz": "^2.4.0",
     "node-fetch": "^1.5.3",
     "rethink-migrate": "^1.3.1",
